<resources>
    <string name="app_name">LeftoverTracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="homeScreen">Home Screen</string>
    <string name="Register">Register</string>
    <string name="buttonEnter">Enter</string>
    <string name="renetest">ReneTest</string>
    <string name="createinstructions">Please complete all fields.</string>
    <string name="itemname">Name</string>
    <string name="itemcalories">Total Calories</string>
    <string name="itemservings">Servings</string>
    <string name="itemdaysleft">Days Left Before Expiration</string>
    <string name="Done">Done</string>
    <string name="loginButton">Login</string>
    <string name="johnDoe">johnDoe123@gmail.com</string>
    <string name="leftOverTracker">Leftover Tracker!</string>
    <string name="stayFresh">Stay Fresh!</string>
    <string name="acctRegistration">Account Registration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="fillVals">Please fill in all data below</string>
    <string name="submit">Submit</string>
    <string name="listName">listname</string>
    <string name="daysLeft">#days</string>

    <string name="leftover_name">Pasta</string>
    <string name="days_eat">5 days</string>

    <string-array name="leftover_foods_full_txt">
        <item>Pasta</item>
        <item>Spaghetti</item>
        <item>Ravioli</item>
        <item>Mashed Potatoes</item>
        <item>Chicken Wings</item>
        <item>Burrito</item>
        <item>Cheese Burger</item>
        <item>Dumplings</item>
        <item>Lasagna</item>
        <item>Tacos</item>
    </string-array>

    <string-array name="num_days_to_eat">
        <item>5 days</item>
        <item>4 days</item>
        <item>2 days</item>
        <item>5 days</item>
        <item>7 days</item>
        <item>3 days</item>
        <item>1 day</item>
        <item>3 days</item>
        <item>7 days</item>
        <item>5 days</item>
    </string-array>

    <string-array name="leftover_ex">
        <item>Empty List</item>
    </string-array>

    <string-array name="num_days_ex">
        <item>No Days</item>
    </string-array>

</resources>