<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingVertical="1dp"
    android:paddingHorizontal="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/leftoverTrackerColor">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="1dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/listImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/add"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/listName"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="110dp"
            android:layout_toEndOf="@id/listImage"
            android:text="@string/listName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/listTime"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="110dp"
            android:layout_toEndOf="@id/listName"
            android:text="@string/daysLeft"
            android:textSize="16sp" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/buttonCalendar"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/leftoverTrackerColor"
        android:scaleType="fitCenter"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/calendar2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/trashButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ImageButton
        android:id="@+id/buttonAddRecipe"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginEnd="16dp"
        android:background="@color/leftoverTrackerColor"
        android:scaleType="fitCenter"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trashButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="WELCOME BACK!"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"

        android:fontFamily="monospace"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="mono"
        android:text="@string/stayFresh"
        android:textColor="#903C3C"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864"
        tools:fontFamily="monospace" />

    <ImageButton
        android:id="@+id/trashButton"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:background="@color/leftoverTrackerColor"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddRecipe"
        app:layout_constraintStart_toEndOf="@+id/buttonCalendar"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/trashmanimage" />

</androidx.constraintlayout.widget.ConstraintLayout>